--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
 </head>
-<body ng-app="YourApp">
+<body ng-app="app">
 
     <div>
         Super-duper page
