--- a/static/index.html
+++ b/static/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <base href="/">
 </head>
 <body ng-app="app">
 
-    <div>
+    <div ui-view>
         Super-duper page
     </div>
 
@@ -15,6 +17,7 @@
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
     <script src="/bower_components/hammerjs/hammer.js"></script>
     <script src="/bower_components/angular-material/angular-material.js"></script>
+    <script src="/bower_components/ui-router/release/angular-ui-router.min.js"></script>
     <script src="/js/app.js"></script>
 </body>
 </html>
