--- a/static/index.html
+++ b/static/index.html
@@ -17,6 +17,7 @@
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
     <script src="/bower_components/hammerjs/hammer.js"></script>
     <script src="/bower_components/angular-material/angular-material.js"></script>
+    <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="/bower_components/ui-router/release/angular-ui-router.min.js"></script>
     <script src="/js/app.js"></script>
 </body>
