create named view for logged users

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 <body ng-app="app">
 
     <div ui-view>
-        Super-duper page
+        Loading...
     </div>
 
     <script src="/bower_components/angular/angular.js"></script>
