--- a/static/index.html
+++ b/static/index.html
@@ -6,12 +6,8 @@
     <link rel="stylesheet" href="/css/style.css">
     <base href="/">
 </head>
-<body ng-app="app">
-
-    <div ui-view>
-        Loading...
-    </div>
-
+<body ng-app="app" ui-view>
+    Loading...
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-aria/angular-aria.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
