--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     <base href="/">
 </head>
 <body ng-app="app" ui-view>
-    Loading...
+    <md-progress-circular md-mode="indeterminate"></md-progress-circular>
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-aria/angular-aria.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
