--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
     <script src="/bower_components/angular-material/angular-material.js"></script>
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="/bower_components/ui-router/release/angular-ui-router.min.js"></script>
+    <script src="/bower_components/moment/moment.js"></script>
     <script src="/js/app.js"></script>
 </body>
 </html>
