add website title

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
     <link href='//fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/style.css">
+    <title>uniScheduler</title>
     <base href="/">
 </head>
 <body ng-app="app" ui-view>
